--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ h1 a:hover {color:#aaa;}
 #content #posts .post .commentlink {position:relative;float:right;margin:10px 0 20px 0;}
 #content #posts .post .commentlink a {padding:8px;border:1px solid #999;background:#eee;text-decoration:none;color:#333;}
 #content #posts .post .commentlink a:hover {color:#000;border:1px solid #000;background:#ddd;}
+#content .navigation { clear: both; }
 #content .navigation .alignleft {float:left;}
 #content .navigation .alignright {float:right;}
 #content .navigation .alignleft a, #content .navigation .alignright a {text-decoration:none;color:#000;padding:8px;border:1px solid #ddd;background:#eee;}
