--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ h1 a:hover {color:#aaa;}
 #rss a:hover {text-decoration:underline;}
 #rss img {margin:0 7px -7px 0;}
 #search {position:absolute;text-align:right;right:10px;bottom:8px;width:300px;}
-#search input#s {border:1px solid #476B8F;}
-#search input#searchsubmit {background:transparent;border:none;color:#ddd;font-size:0.8em;}
+input#s {border:1px solid #476B8F;}
+input#searchsubmit {background:transparent;border:none;color:#ddd;font-size:0.8em;}
 
 /* SIDEBAR */
 
@@ -64,7 +64,7 @@ h1 a:hover {color:#aaa;}
 
 /* CONTENT */
 
-#content div#sidebar {position:relative;float:left;width:200px;}
+
 #content #posts {position:relative;float:right;width:650px;padding:30px 0 0 20px;}
 #content #posts h2 {margin:0 0 5px 0;}
 #content #posts h2 a {font-size:1.1em;font-weight:normal;color:#000;text-decoration:none;}
